[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.2"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]

[dependencies]
clap = "~2"
flate2 = "~0.2"
horrorshow = "~0.6"
hyper = "~0.10"
hyper-native-tls = "~0.2"
iron = "~0.5"
log = "~0.3"
router = "~0.5"
serde_json = "~1.0"
clippy = {version = "~0", optional = true}
unicase = "~1.4"

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
