[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.5"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0", features = ["std", "cargo", "wrap_help"] }
flate2 = "1"
horrorshow = "0.8"
hyper = "0.10"
hyper-native-tls = "0.3"
iron = "0.6"
log = "0.4"
router = "0.6"
serde_json = "1.0"
unicase = "1"
time = "0.1"

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
