[package]
name = "iptoasn-webservice"
description = "API server for iptoasn.com"
version = "0.2.5"
homepage = "https://iptoasn.com"
repository = "https://github.com/jedisct1/iptoasn-webservice"
keywords = ["ip", "asn", "bgp"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[dependencies]
clap = { version = "4.3.10", features = ["std", "cargo", "wrap_help"] }
flate2 = {version = "1"}
reqwest = { version = "0.11.18", features = ["blocking", "gzip","native-tls"] }
horrorshow = "0.8"
tokio = { version = "1.29.1" }
actix-web = "4"
log = "0.4"
env_logger = "0.10.0"
serde_json = "1.0"
mime = "0.3.17"
[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = 3
